<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        style="@style/colorBg"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="@style/colorBg"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cr_detail"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/blue_700">

                <ImageView
                    android:id="@+id/bg_detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic"
                    android:contentDescription="@string/image_detail_poster" />

                <ImageView
                    style="@style/colorGradient"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    app:layout_constraintBottom_toBottomOf="@+id/bg_detail_toolbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/gradient_for_backdrop" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_detail_movie"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:navigationIcon="@drawable/ic_back_white" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cd_detail_movie"
                android:layout_width="135dp"
                android:layout_height="200dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="-0dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_detail_movie">

                <ImageView
                    android:id="@+id/img_detail_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_detail_poster"
                    android:scaleType="fitXY"
                    tools:src="@tools:sample/backgrounds/scenic" />

            </androidx.cardview.widget.CardView>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        style="@style/colorBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/pb_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/lorem" />

            <TextView
                android:id="@+id/tv_detail_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_title"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
                tools:text="@string/lorem" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/user_rating"
                app:layout_constraintBottom_toBottomOf="@+id/percent_detail"
                app:layout_constraintStart_toEndOf="@+id/percent_detail"
                app:layout_constraintTop_toTopOf="@+id/percent_detail" />

            <TextView
                android:id="@+id/tv_detail_genre_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_tag"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_tag"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_tag"
                tools:text="@string/lorem" />

            <com.ramijemli.percentagechartview.PercentageChartView
                android:id="@+id/percent_detail"
                style="@style/colorPercentageText"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_tag"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_genre_movie"
                app:pcv_backgroundBarColor="@color/gray_600"
                app:pcv_backgroundBarThickness="6dp"
                app:pcv_mode="ring"
                app:pcv_progress="64"
                app:pcv_progressBarThickness="6dp"
                app:pcv_progressColor="@color/blue_700" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_tag"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_tag"
                app:layout_constraintTop_toBottomOf="@+id/percent_detail">

                <TextView
                    android:id="@+id/tv_detail_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/poppins_medium"
                    tools:text="@string/lorem_ipsum" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>