<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="lorem">Lorem Ipsum</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ipsum arcu, dignissim a hendrerit in, consequat eu tortor. Suspendisse convallis molestie aliquet. Mauris quis lectus at diam molestie dignissim vitae vitae odio. Maecenas tristique eu neque in ultrices. Nunc erat sapien, molestie ac metus nec, tincidunt iaculis metus. Maecenas hendrerit purus purus, sit amet facilisis mauris aliquet ut. Ut posuere et erat a pulvinar. Praesent id bibendum metus. Aenean fermentum metus porta, facilisis orci eu, iaculis ipsum. Nam aliquam placerat mi, quis scelerisque lacus eleifend ultrices. Integer ut laoreet magna</string>
    <string name="image_detail_poster">Image Detail Poster</string>
    <string name="user_rating">User Rating</string>
    <string name="data">Movies</string>
    <string name="tv_show">Tv Shows</string>
    <string name="random_movie">Random Movie Today</string>
    <string name="movie">Movie</string>
    <string name="internet_error">Please Check Your Internet Connection</string>
    <string name="no_desc">No Description Here</string>
    <string name="no_tag">No Tag Here</string>
    <string name="gradient_for_backdrop">Gradient for Backdrop</string>
</resources>